Use List.getLast() for the previous-segment check